Youtube media Downloader.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,10 +12,12 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.5
+loguru==0.7.3
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 pydantic==2.10.6
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
 python-dotenv==1.0.1
@@ -32,3 +34,4 @@ uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
 websockets==14.2
+yt-dlp==2025.1.26
