--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@
 FROM ubuntu:22.04
 
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /backend
 
 # Install necessary dependencies
 RUN apt-get update && apt-get install -y \
@@ -13,16 +13,16 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Download and install the FFmpeg build
-RUN wget -q https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz \
-    && tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
-    && mv ffmpeg-master-latest-linux64-gpl /usr/local/ffmpeg \
-    && rm ffmpeg-master-latest-linux64-gpl.tar.xz
+RUN wget -q https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linuxarm64-gpl.tar.xz \
+    && tar -xf ffmpeg-master-latest-linuxarm64-gpl.tar.xz \
+    && mv ffmpeg-master-latest-linuxarm64-gpl /usr/local/ffmpeg \
+    && rm ffmpeg-master-latest-linuxarm64-gpl.tar.xz
 
 # Add FFmpeg to the PATH
 ENV PATH="/usr/local/ffmpeg/bin:$PATH"
 
 # Copy FastAPI application files into the container
-COPY . /app
+COPY . /backend
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
@@ -31,4 +31,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 8000
 
 # Command to run FastAPI
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
