--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.8.0
+Brotli==1.1.0
 certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
 dnspython==2.7.0
 email_validator==2.2.0
@@ -16,6 +18,8 @@ loguru==0.7.3
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mutagen==1.47.0
+pycryptodomex==3.21.0
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
@@ -23,6 +27,7 @@ Pygments==2.19.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
 shellingham==1.5.4
@@ -30,6 +35,7 @@ sniffio==1.3.1
 starlette==0.45.3
 typer==0.15.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
