--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 anyio==4.8.0
+boto3==1.36.10
+botocore==1.36.10
 Brotli==1.1.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
@@ -14,6 +16,7 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.5
+jmespath==1.0.1
 loguru==0.7.3
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -24,13 +27,16 @@ pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
+s3transfer==0.11.2
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
 typer==0.15.1
