Updated code for the YouTube service.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   fastapi-app:
     build:
@@ -7,12 +9,5 @@ services:
       - "8000:8000"  # Expose the application on port 8000
     volumes:
       - .:/app  # Mount the current directory into the container
-    environment: # Used for EC2 instance, overridden when passed inline
-      - ALLOWED_ORIGINS
-      - ALLOW_CREDENTIALS
-      - ALLOW_METHODS
-      - ALLOW_HEADERS
-      - APP_DEBUG
-      - S3_BUCKET_NAME
-      - AWS_ACCESS_KEY_ID_VALUE
-      - AWS_SECRET_ACCESS_KEY_VALUE
+    env_file:
+      - .env  # Load environment variables from .env file
